--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.DS_Store
+locationAPI/.DS_Store
+locationAPI/maps/.DS_Store
+weatherAPI/.DS_Store
